Added JWT support, user-task relationship, and MySQL integration. Added JWTUtils for token generation and validation. Added AuthEntryPointJwt for unauthorized access handling.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=taskManager
+jwt.secret=${JWT_SECRET}
+jwt.expiration=86400000
+
+spring.datasource.url=${DB_URL}?useSSL=false
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
